mksc/testcases/compile/fail/class_3.mks
# compile fail
# dupricate method
class A
	def method()
	end

	def method()
	end
end
